--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 
 <html>
+    <head>
+        <title>GED - Website</title>
+        <link rel="stylesheet" href="CSS/stylesheet.css">
+    </head>
+    
     <h1>
         My Site
     </h1>
