--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>GED - Website</title>
+        <title>GoldenGeneral22 - Website</title>
         <link rel="stylesheet" href="CSS/stylesheet.css">
     </head>
     
