--- a/index.html
+++ b/index.html
@@ -10,4 +10,9 @@
         My Site
     </h1>
     
+  <audio controls autoplay>
+    <source src="scam.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+    
 </html>
