--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+b<!DOCTYPE html>
 
 <html>
     <head>
-        <title>You just got hacked</title>
+        <title>You have been hacked</title>
         <link rel="stylesheet" href="CSS/stylesheet.css">
     </head>
     
     <h1>
-        You just got hacked
+        You jhave been hacked
     </h1>
     
   <audio controls autoplay>
