--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ b<!DOCTYPE html>
     </head>
     
     <h1>
-        You jhave been hacked
+        You have been hacked
     </h1>
     
   <audio controls autoplay>
