--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ b<!DOCTYPE html>
     </h1>
     
   <audio controls autoplay>
-      <source src="scam.mp3" type="audio/mpeg">
+      <source src="totally not a scam.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
   </audio>
     
