--- a/index.html
+++ b/index.html
@@ -4,23 +4,18 @@
     <head>
         <title>CaesarCipher</title>
         <link rel="stylesheet" href="mystyle.css">
-        <style>
-            input[type=checkbox] {
-                transform: scale(2);
-                margin-right: 30px;
-            }
-            input[type=number] {
-                transform: scale(1.5);
-                width: 40px;
-            }
-        </style>
     </head>
-    <body style="background-color: rgb(70, 70, 70);";>
+    <body>
         
         <h1>Caesar Cipher Online</h1>
+        <div>
+            <a href="https://github.com/GoldenGeneral22/GoldenGEneral22.github.io" target="_blank">Source Code</a>
+        </div>
 
         <h3>Input the message here:</h3>
-        <textarea id="message"></textarea>
+        <div>
+            <input id="message" type="text" width="450px" font-size="25px">
+        </div>
         
         <h3>Input the key here:</h3>
         <div>
