--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>CaesarCipher</title>
-        <link rel="stylesheet" href="mystyle.css">
+        <link rel="stylesheet" href="css/mystyle.css">
     </head>
     <body>
         
@@ -50,5 +50,5 @@
             <button class="btn start" onclick="clicked()">Start</button>
         </div>
     </body>
-    <script src="script.js" charset="utf-8"></script>
+    <script src="js/script.js" charset="utf-8"></script>
 </html>
