Added Easter Egg 2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!--Interlectual Property of FTMMBL Key: 19 oder BJGYZIBZIZMVG Key: 21-->
+<!--Interlectual Property of XYJJDH Key: youreAnIdiot oder BJGYZIBZIZMVG Key: 21-->
 
 <html>
     <head>
