Added thanks for alpha testers

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<!--Interlectual Property of XYJJDH Key: youreAnIdiot oder BJGYZIBZIZMVG Key: 21-->
+<!--Interlectual Property of XYJJDH Key: youreAnIdiot oder BJGYZIBZIZMVG Key: 21
+    Thanks to ZRQFEOO Key: epicguy for alpha testing-->
 
 <html>
     <head>
